<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scheme_Preliminary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="title_activity_activity__selector">Activity_Selector</string>
    <string name="title_activity_evaluation_">Evaluation_Activity</string>
    <string name="title_activity_viewing_">Viewing_Activity</string>
    <string name="title_activity_scheme__creator">Scheme_Creator</string>
    <string name="title_activity_string__creator">String_Creator</string>
    <string name="title_activity_navigation__box_">Navigation_Box_Activity</string>
    <string name="Number9">9</string>
    <string name="Number8">8</string>
    <string name="Number7">7</string>
    <string name="Number6">6</string>
    <string name="Number5">5</string>
    <string name="Number4">4</string>
    <string name="Number3">3</string>
    <string name="Number2">2</string>
    <string name="Number1">1</string>
    <string name="Number0">0</string>
    <string name="Unknown">\?</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Times">*</string>
    <string name="DividedBy">/</string>
    <string name="Eval">eval</string>
    <string name="OpenParenthesis">(</string>
    <string name="CloseParenthesis">)</string>
    <string name="Clear">C</string>
    <string name="Equals">=</string>
    <string name="Semicolon">;</string>
    <string name="Enter">Enter</string>
    <string name="unused"></string>
    <string name="title_activity_if_box__fragment">IfBox_Fragment</string>
    <string name="title_activity_let_box__fragment">LetBox_Fragment</string>
    <string name="title_activity_lambda_box__fragment">LambdaBox_Fragment</string>
    <string name="title_activity_call_box__fragment">CallBox_Fragment</string>
    <string name="title_activity_box">BoxActivity</string>
    <string name="title_activity_if_box_">IfBox_Activity</string>
    <string name="title_activity_int_box__fragment">IntBox_Fragment</string>
    <string name="title_activity_parameter_box__fragment">ParameterBox_Fragment</string>
    <string name="title_activity_bindings_box__fragment">BindingsBox_Fragment</string>
    <string name="title_activity_int_id_box__fragment">IntIdBox_Fragment</string>
    <string name="If">if</string>
    <string name="newVar">New Variable</string>
    <string name="varCreate">Create Var</string>
    <string name="varSelect">Select Var</string>
    <string name="opSelect">Operators</string>
    <string name="lambda">λ</string>
    <string name="let">let</string>
    <string name="title_activity_right_side_bar__fragment">RightSideBar_Fragment</string>
    <string name="title_activity_top_side_bar__fragment">TopSideBar_Fragment</string>
    <string name="title_activity_definition_box__fragment">DefinitionBox_Fragment</string>
    <string name="title_activity_and_box__fragment">AndBox_Fragment</string>
    <string name="title_activity_or_box__fragment">OrBox_Fragment</string>
    <string name="title_activity_and_or_box__fragment">AndOrBox_Fragment</string>
    <string name="action_dd">Add</string>
    <string name="title_activity_cond_box__fragment">CondBox_Fragment</string>
    <string name="title_activity_pair_generator">PairGenerator</string>
    <string name="title_activity_viewing__fragment">Viewing_Fragment</string>
    <string name="title_activity_evaluation__fragment">Evaluation_Fragment</string>
    <string name="view_activity">View</string>
    <string name="evaluate_actiivty">Evaluate</string>
    <string name="save_activity">Save</string>
    <string name="action_program_name">Name Your Program</string>
    <string name="action_copy">Copy</string>
    <string name="title_activity_string_input__fragment">StringInput_Fragment</string>
    <string name="title_activity_clipboard__fragment">Clipboard_Fragment</string>
    <string name="action_clipboard">Clipboard</string>
    <string name="title_activity_clipboard_simple__fragment">ClipboardSimple_Fragment</string>
    <string name="title_activity_popup__viewing">Popup_Viewing</string>

</resources>
