<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#193222"
        android:orientation="vertical"
        android:weightSum="6" >

        <LinearLayout
            android:id="@+id/keyrow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:weightSum="2" >

            <LinearLayout
                android:id="@+id/varOps"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/varCreateButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNewFragmentNeeded"
                    android:text="@string/varCreate" />

                <Button
                    android:id="@+id/varSelectButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNewFragmentNeeded"
                    android:text="@string/varSelect" />
            </LinearLayout>

            <Button
                android:id="@+id/opSelectButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onNewFragmentNeeded"
                android:text="@string/opSelect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyrow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3" >

            <Button
                android:id="@+id/Button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number7" />

            <Button
                android:id="@+id/Button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number8" />

            <Button
                android:id="@+id/Button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/Button7"
                android:layout_toRightOf="@+id/Button8"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyrow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3" >

            <Button
                android:id="@+id/Button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number4" />

            <Button
                android:id="@+id/Button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number5" />

            <Button
                android:id="@+id/Button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/Button4"
                android:layout_toRightOf="@+id/Button5"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyrow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3" >

            <Button
                android:id="@+id/Button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number1" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/Button1"
                android:layout_toRightOf="@+id/Button1"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number2" />

            <Button
                android:id="@+id/Button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/Button1"
                android:layout_toRightOf="@+id/Button2"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keyrow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2" >

            <Button
                android:id="@+id/Button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/Button2"
                android:layout_below="@+id/Button2"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Number0"
                android:textSize="16sp" />

            <Button
                android:id="@+id/EnterButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/Enter"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>